# eHack-chatbot

./: leads.txt  practise.ipynb  pyproject.toml  requirments.txt
ingest/: build_index.py  chunk.py  crawl.py  embed.py  run_ingest.py
rag_service/: api.py  graph.py  intent_node.py  lead.py  lead_prompt_node.py  profile.py  profile_extractor.py  prompts.py  recommended_node.py  retriever.py  save_lead.py  state.py  test_graph.py
rag_service/storage/: ehack_context.md
vector_store/faiss_index/: index.pkl
